--- a/templates/challenges/show.html.twig
+++ b/templates/challenges/show.html.twig
@@ -8,6 +8,10 @@
             <h1>{{ challenge.title }}</h1>
         </div>
         <p>{{ challenge.description }}</p>
+
+        {%  if form is not null %}
+            {{ form(form) }}
+        {% endif %}
     </div>
 
 {% endblock %}
