--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -49,8 +49,17 @@
                         <ul class="space-y-3">
                             {% for result in results %}
                                 <li class="flex items-center justify-between rounded-xl border border-base-200/60 bg-base-200/40 px-4 py-3">
-                                    <span class="font-medium">{{ result.challenge.title }}</span>
-                                    <span class="badge badge-primary badge-outline">{{ result.score }}</span>
+                                    <span class="flex gap-3 items-center">
+                                        <span class="font-medium">{{ result.challenge.title }}</span>
+                                        <span class="badge badge-primary badge-outline">Score: {{ result.score }}</span>
+                                    </span>
+
+                                    <span class="flex gap-3 items-center">
+                                        <span class="font-medium">{{ result.date|date("d/m/y") }}</span>
+
+                                        <a href="{{ path('challenges_show', { slug: result.challenge.slug}) }}" class="btn btn-primary">Modifier</a>
+                                    </span>
+
                                 </li>
                             {% endfor %}
                         </ul>
